# zootopia3

./: LICENSE  README.md  hf-dataset.py  modeling-exercise-2.ipynb  modeling.py  pyproject.toml
answers/: inference-exercise.ipynb  modeling-colored-shapes.ipynb  modeling-exercise-1.ipynb  modeling-exercise-2.ipynb  modeling-waves.ipynb  modeling.py  simulate-exercise.ipynb
examples/: developing.ipynb  modeling-exercise-1.ipynb  modeling-exercise-2.ipynb  modeling.ipynb  simulate-exercise.ipynb  simulate.ipynb
scripts/: hf-convert.py  hf-dataset.py  hf-model.py  hf-push.py  modeling-final.py  modeling.py
src/zootopia3/: __init__.py  diamond.py  simulate.py
src/zootopia3/models/: __init__.py  cnn.py  mlp.py  models.py  rnn.py
src/zootopia3/shapes/: __init__.py  circle.py  diamond.py  image.py  rectangle.py  shape.py  triangle.py
src/zootopia3/simulate/: __init__.py  simulate.py
src/zootopia3/waves/: __init__.py  sine.py
tests/: test_shape.py  test_sim.py  test_simple.py
