[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zootopia3"
version = "1.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Seth D. Temple", email="sethtem@umich.edu" },
]
description = "Fitting simple torch models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.15",
    "pandas>=2.0",
    "scikit-learn>=1.6",
    "xgboost>=3.1.2",
    "statsmodels",
    "matplotlib>=3.10",
    "torch>=2.5",
    "transformers>=4.57.0",
    "torchvision",
    "timm",
    "pytest>=7.0.0",

]

[project.optional-dependencies]
vizualization = [
    "seaborn", 
    "plotly",
]
notebook = [
    "jupyterlab>=4.0.0",
    "ipykernel>=7.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.urls]
"Homepage" = "https://github.com/sdtemple/zootopia3"
"Bug Tracker" = "https://github.com/sdtemple/zootopia3/issues"